--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "seed": "tsx src/lib/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
